<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LispMediaPlayer</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="title_activity_main_activity_open_sles">MainActivityOpenSLES</string>

    <string name="action_settings">Settings</string>
    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_main">MVP Example</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="login_success">login success</string>

    <string name="main_homepage_text">首页</string>
    <string name="main_search_text">搜索</string>
    <string name="main_cache_text">缓存</string>
    <string name="main_recommend_text">推荐</string>
    <string name="main_userpage_text">我的</string>
    
    <string name="homepage_menu_index">首页</string>
    <string name="homepage_menu_live">直播</string>
    <string name="homepage_menu_tvseries">电视剧</string>
    <string name="homepage_menu_movie">电影</string>
    <string name="homepage_menu_cartoon">动画片</string>
    <string name="homepage_menu_favourite">我的收藏</string>
    <string name="homepage_menu_recommendview">推荐</string>

    <string name="cachepage_menu_finnished">已经下载</string>
    <string name="cachepage_menu_downloading">正在下载</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_np">MainActivityNP</string>

</resources>
