...
      android:id="@+id/btn_command_webUPActivityAllService"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:text="web 攻击测试UPActivityAllService"
      />
  <Button
      android:id="@+id/button"
      android:layout_width="match_parent"
      android:layout_height="50dp"

      android:text="Button"
      />
</LinearLayout>
...
